--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                       </td>
                       
                       <td>
-                        <a href="/Ejercicio04/ejercicio-4.xml" class="btn1">
+                        <a href="Ejercicio04/ejercicio-4.xml" class="btn1">
                           <b>Ejercicio 4</b>
                         </a>
                       </td>
