Enlaces de Index a Ejercicio 01 y 02
Enlaces de ida y venida hacia el index.html

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                     <!-- Primera fila-->
                     <tr>
                       <td>
-                        <a href="" class="btn1">
+                        <a href="Ejercicio01/Ejemplo1dtd.xml" class="btn1">
                           <b>Ejercicio 1</b>
                         </a>
                       </td>
                       
                       <td>
-                        <a href="" class="btn1">
+                        <a href="Ejercicio02/Ejemplo2dtd.xml" class="btn1">
                           <b>Ejercicio 2</b>
                         </a>
                       </td>
@@ -100,13 +100,13 @@
                     <!-- Segunda fila-->
                     <tr>
                       <td>
-                        <a href="" class="btn1">
+                        <a href="Ejercicio01/ejercicio-ii-1a-dtd.xml" class="btn1">
                           <b>Ejercicio 1a</b>
                         </a>
                       </td>
 
                       <td>
-                        <a href="" class="btn1">
+                        <a href="Ejercicio02/ejercicio-ii-2a-dtd.xml" class="btn1">
                           <b>Ejercicio 2a</b>
                         </a>
                       </td>
@@ -115,13 +115,13 @@
                     <!-- Tercera fila-->
                     <tr>
                       <td>
-                        <a href="" class="btn1">
+                        <a href="Ejercicio01/ejercicio-ii-1b-dtd.xml" class="btn1">
                           <b>Ejercicio 1b</b>
                         </a>
                       </td>
 
                       <td>
-                        <a href="" class="btn1">
+                        <a href="Ejercicio02/ejercicio-ii-2b-dtd.xml" class="btn1">
                           <b>Ejercicio 2b</b>
                         </a>
                       </td>
@@ -130,13 +130,13 @@
                     <!-- Cuarta fila-->
                     <tr>
                       <td>
-                        <a href="" class="btn1">
+                        <a href="Ejercicio01/ejercicio-ii-1c-dtd.xml" class="btn1">
                           <b>Ejercicio 1c</b>
                         </a>
                       </td>
 
                       <td>
-                        <a href="" class="btn1">
+                        <a href="Ejercicio02/ejercicio-ii-2c-dtd.xml" class="btn1">
                           <b>Ejercicio 2c</b>
                         </a>
                       </td>
