Correciones de validación
Error que surgierón con la dtd al momento de asignar el enlace

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Tecnincas de Programación en Internet TPI115
+              Técnicas de Programación en Internet TPI115
             </span>
           </a>
         </nav>
