--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                       </td>
 
                       <td>
-                        <a href="" class="btn1">
+                        <a href="Ejercicio03/ejercicio-3-dtd.xml" class="btn1">
                           <b>Ejercicio 3</b>
                         </a>
                       </td>
