--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                     <tr>
                       <td>
                         <a href="Ejercicio01/Ejemplo1dtd.xml" class="btn1">
-                          <b>Ejercicio 1</b>
+                          <b>Ejemplo 1</b>
                         </a>
                       </td>
                       
                       <td>
                         <a href="Ejercicio02/Ejemplo2dtd.xml" class="btn1">
-                          <b>Ejercicio 2</b>
+                          <b>Ejemplo 2</b>
                         </a>
                       </td>
 
